<resources>
    <string name="app_name" translatable="false">BStone</string>
    <string name="login_title">登录</string>
    <string name="login_userinput">账号</string>
    <string name="login_passwordinput">密码</string>
    <string name="login_loginbutton">登录</string>
    <string name="login_registbutton">注册</string>
    <string name="register">注册</string>
    <string name="register_title">注册</string>
    <string name="register_userinput">用户名</string>
    <string name="register_passwordinput">密码</string>
    <string name="register_passwordinputagain">确认密码</string>
    <string name="register_iphoneinput">电话号码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="menu_title_one">社区</string>
    <string name="menu_title_two">亲密</string>
    <string name="menu_title_three">趣</string>
    <string name="title_activity_fragment_demo" translatable="false">MainActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="register_capinput">验证码</string>
    <string name="navigationview_menulist_myself">个人信息</string>
    <string name="navigationview_menulist_myself2">个人信息</string>
    <string name="bottomnavigationview_menulist_messages">社区</string>
    <string name="navigationview_menulist_kiss">亲密</string>
    <string name="navigationview_menulist_fun">趣</string>
    <string name="CAP">获取验证码</string>
    <string name="other">其他方式</string>
    <string name="iphonelogin">QQ登录</string>
    <string name="navigationview_menulist_darktheme">深色模式</string>
    <string name="home_recyelerviwe_cardview">这是一个理想的app，这是一个新的组件CardView！</string>
    <string name="register_registerbutton">注册</string>
    <string name="home_car_time">2020/6/24</string>
    <string name="home_button_good">赞</string>
    <string name="nav_view_menusweet">我的秘密</string>
    <string name="nav_view_menu_theme">主题</string>
    <string name="nav_view_menu_settig">设置</string>
    <string name="nav_view_menu_about">关于作者</string>
    <string name="th_text_red">红色</string>
    <string name="th_text_blue">蓝色</string>
    <string name="th_text_yellow">黄色</string>
    <string name="th_text_green">绿色</string>
    <string name="th_text_purple">紫色</string>
    <string name="th_text_grey">灰色</string>
    <string name="th_bar_title">主题</string>
    <string name="person_topbar_text">个人信息</string>
    <string name="fun_ip_text">IP查询</string>
    <string name="nav_view_person_exit">退出</string>
</resources>