<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".nav_view_fragment.NavVIew_Theme">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/theme_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/th_bar_title"
                app:titleTextColor="@color/nav_view_theme_bartitlecolor" />
        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/th_red_1"
            android:layout_width="180dp"
            android:layout_height="320dp"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FF8A80"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="50dp"
                android:text="@string/th_text_red"
                android:textColor="#ffffff"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/th_blue_2"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:layout_marginStart="15dp"
            android:backgroundTint="#2196F3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/th_red_1"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="50dp"
                android:text="@string/th_text_blue"
                android:textColor="#ffffff"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/th_yellow_3"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:layout_marginStart="15dp"
            android:backgroundTint="#FFEB38"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/th_red_1"
            app:layout_constraintTop_toBottomOf="@+id/th_blue_2"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="50dp"
                android:text="@string/th_text_yellow"
                android:textColor="#ffffff"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/th_green_4"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="#4CAF50"
            app:layout_constraintEnd_toEndOf="@+id/th_red_1"
            app:layout_constraintStart_toStartOf="@+id/th_red_1"
            app:layout_constraintTop_toBottomOf="@+id/th_red_1"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="50dp"
                android:text="@string/th_text_green"
                android:textColor="#ffffff"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/th_grey_5"
            android:layout_width="180dp"
            android:layout_height="320dp"
            android:layout_margin="10dp"
            android:backgroundTint="#9E9E9E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/th_green_4"
            app:layout_constraintTop_toBottomOf="@+id/th_yellow_3"
            app:layout_constraintVertical_bias="0.4"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="50dp"
                android:text="@string/th_text_grey"
                android:textColor="#ffffff"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/th_purple_6"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:backgroundTint="#9C27B0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/th_green_4"
            app:layout_constraintStart_toStartOf="@+id/th_green_4"
            app:layout_constraintTop_toBottomOf="@+id/th_green_4"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="50dp"
                android:text="@string/th_text_purple"
                android:textColor="#ffffff"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />
        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>